# langchain_codegen

./: .gitignore  README.md  agent.py  agent_n.py  agent_orch.py  agent_orch_advanced.py  generated_code.py  generated_code_01.py  generated_code_A.py  generated_code_A_mix.py  generated_code_agent.py  generated_code_agent_advanced.py  generated_code_mix.py  main.py  main_01.py  main_advanced.py  main_mix.py  pyproject.toml  style_knowledge_base.py  style_knowledge_base_advanced.py  utils.py
tests/: test_generated_code.py  test_generated_code_01.py  test_generated_code_A.py  test_generated_code_A_mix.py  test_generated_code_agent.py  test_generated_code_agent_advanced.py  test_generated_code_mix.py
